# odin-emcc-linking

./: .gitignore  README.md  index.html  main.odin
exports/: CMakeLists.txt  exports.c  exports.h
